--- a/Javascript/css/style1.css
+++ b/Javascript/css/style1.css
@@ -22,6 +22,13 @@ body.sticky {
 			    box-sizing: border-box;
 			}
 
+
+#loading {
+	height: 200px;
+	width: 200px;
+}
+
+
 /*.blurheader{
 	background: transparent;
 	overflow: hidden;
